# tr1_hardware_interface

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  controllers.yaml~  controllers_sim.yaml  fake_joint_offsets.yaml  hardware.yaml  joint_limits.yaml  joint_offsets.yaml
include/tr1_hardware_interface/: tr1_hardware.h  tr1_hardware_interface.h
launch/: tr1_effort_controllers.launch  tr1_hardware_interface.launch  tr1_position_controllers.launch  tr1_position_trajectory_controllers.launch
src/: .tr1_hardware_interface.cpp.swp  tr1_hardware_interface.cpp  tr1_hardware_interface.cpp.save  tr1_hardware_interface.cpp.save.1  tr1_hardware_interface.cpp.save.2  tr1_hardware_interface_node.cpp
